fixed compain's pages layout

--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -8,4 +8,5 @@
 @import channel-selection/index
 @import compain-details/index
 @import compain-audience/index
+@import compain-review/index
 @import footer
