--- a/src/sass/components/compain-details/_compain-details.sass
+++ b/src/sass/components/compain-details/_compain-details.sass
@@ -1,27 +1,9 @@
 .compain-details
-    &__inner
-        padding-top: rem(153px)
-        vertical-align: bottom
-        +r(1439)
-            padding-top: rem(114px)
-        +md
-            padding: rem(114px 0 0)
-        +sm
-            padding: rem(100px 0 0)
-    &__body
-        color: $gray-900
-        font-size: rem(20px)
-        +md
-            font-size: rem(16px)
-        +sm
-            font-size: rem(14px)
-    &__nav
-    &__content
-        padding: rem(94px 40px 40px)
-        +md
-            padding: rem(50px 40px 40px)
-        +sm
-            padding: rem(30px 10px)
+    padding: rem(94px 40px 40px)
+    +md
+        padding: rem(50px 40px 40px)
+    +sm
+        padding: rem(30px 10px)
     &__form
         display: flex
         flex-direction: column
@@ -103,10 +85,14 @@
                 font-size: 0
         +sm
             padding-left: rem(15px)
+            font-size: rem(16px)
         +placeholder
             font-size: rem(20px)
             line-height: 1.5
             color: $gray-700
+            +sm
+                font-size: rem(14px)
+                line-height: 1.3
     &__submit
         margin-top: rem(17px)
 
@@ -130,10 +116,21 @@
         font-family: $font-family-montserrat
         font-weight: 500
         font-size: rem(20px)
-        color: $gray-700
+        color: $gray-900
         +sm
             padding-left: rem(15px)
             font-size: rem(16px)
+        +placeholder
+            color: $gray-700
+            font-size: rem(18px)
+            font-family: $font-family-inconsolata
+            +sm
+                font-size: rem(14px)
+                line-height: 1.3
+        &:focus
+            +placeholder
+                font-size: 0
+            
         // &:focus
         //     color: $gray-700
     &__label-bottom
@@ -151,8 +148,8 @@
     &.is-validated
         .valid-label
             display: block
-        // .input-group__input
-        //     color: $primary
+        .input-group__input
+            color: $primary
         .input-group__wrap
             color: $primary
             border-left: 5px solid $primary
@@ -174,6 +171,8 @@
             +sm
                 right: 0
         .input-group__label
+            color: $red
+        .input-group__input
             color: $red
         .input-group__wrap
             color: $red
