--- a/src/sass/components/channel-selection/_channel-selection.sass
+++ b/src/sass/components/channel-selection/_channel-selection.sass
@@ -1,27 +1,9 @@
 .channel-selection
-    &__inner
-        padding-top: rem(153px)
-        vertical-align: bottom
-        +r(1439)
-            padding-top: rem(114px)
-        +md
-            padding: rem(114px 0 0)
-        +sm
-            padding: rem(100px 0 0)
-    &__body
-        color: $gray-900
-        font-size: rem(20px)
-        +md
-            font-size: rem(16px)
-        +sm
-            font-size: rem(14px)
-    &__nav
-    &__content
-        padding: rem(135px 40px 40px)
-        +md
-            padding-top: rem(50px)
-        +sm
-            padding: rem(30px 10px)
+    padding: rem(135px 40px 40px)
+    +md
+        padding-top: rem(50px)
+    +sm
+        padding: rem(30px 10px)
     &__form
         display: flex
         flex-direction: column
@@ -167,3 +149,22 @@
             font-size: rem(12px)
             width: rem(25px)
             height: rem(25px)
+
+
+.compain-inner
+    padding-top: rem(153px)
+    vertical-align: top
+    +r(1439)
+        padding-top: rem(114px)
+    +md
+        padding: rem(114px 0 0)
+    +sm
+        padding: rem(100px 0 0)
+
+.compain-body
+    color: $gray-900
+    font-size: rem(20px)
+    +md
+        font-size: rem(16px)
+    +sm
+        font-size: rem(14px)
