--- a/src/templates/partials/compain-audience/_compain-audience.html
+++ b/src/templates/partials/compain-audience/_compain-audience.html
@@ -1,23 +1,9 @@
-<div class="compain-audience login">
-    <div class="compain-audience__inner inner inner_lg login-inner">
-        <div class="compain-audience__body dashboard-body">
-            <ul class="compain-audience__nav compain-menu row no-gutters">
-                {% for item in [
-                    {
-                        text: "1. Channel Selection"
-                    },
-                    {
-                        text: "2. Campaign Details"
-                    },
-                    {
-                        text: "3. Audience & Budget",
-                        active: true
-                    },
-                    {
-                        text: "4. Review & Submit"
-                    }
-                ] %}
-                <li class="compain-audience__nav-item compain-menu__item col {% if item.active %}is-active{% endif %}">
+<div class="login">
+    <div class="compain-inner inner inner_lg login-inner">
+        <div class="compain-body dashboard-body">
+            <ul class="compain-menu row no-gutters">
+                {% for item in [ { text: "1. Channel Selection" }, { text: "2. Campaign Details" }, { text: "3. Audience & Budget", active: true }, { text: "4. Review & Submit" } ] %}
+                <li class="compain-menu__item col {% if item.active %}is-active{% endif %}">
                     <a href="#" class="compain-menu__link">
                         <span class="compain-menu__icon">
                             {{ mixins.icon("check") }}
@@ -29,7 +15,7 @@
                 </li>
                 {% endfor %}
             </ul>
-            <div class="compain-audience__content">
+            <div class="compain-audience">
                 <form class="compain-audience__form">
                     <div class="compain-audience__form-wrap">
                         <div class="compain-audience__row row no-gutters">
@@ -110,49 +96,24 @@
                                             <span class="input-group-text compain-input-text">Age group</span>
                                         </div>
                                         <div class="compain-audience__radio">
-                                                <!-- <div class="row compain-audience__radio-row no-gutters"> -->
-                                            {% for item in [
-                                                {
-                                                    text1: "Any Age"
-                                                },
-                                                {
-                                                    text1: "35-44"
-                                                },
-                                                {
-                                                    text1: "13-17"
-                                                },
-                                                {
-                                                    text1: "45-54"
-                                                },
-                                                {
-                                                    text1: "18-24"
-                                                },
-                                                {
-                                                    text1: "55-64"
-                                                },
-                                                {
-                                                    text1: "25-34"
-                                                },
-                                                {
-                                                    text1: "65+"
-                                                }
-                                            ] %}
-                                                    <!-- <div class="col compain-audience__radio-col"> -->
-                                                        <div class="custom-control custom-radio compain-radio compain-audience__radio-item">
-                                                            <input type="radio" id="compainRadio{{ loop.index }}" name="compainRadio" class="custom-control-input compain-radio__input">
-                                                            <label class="custom-control-label compain-radio__label" for="compainRadio{{ loop.index }}">{{ item.text1 }}</label>
-                                                        </div>
-                                                        <!-- <div class="custom-control custom-radio compain-radio">
+                                            <!-- <div class="row compain-audience__radio-row no-gutters"> -->
+                                            {% for item in [ { text1: "Any Age" }, { text1: "35-44" }, { text1: "13-17" }, { text1: "45-54" }, { text1: "18-24" }, { text1: "55-64" }, { text1: "25-34" }, { text1: "65+" } ] %}
+                                            <!-- <div class="col compain-audience__radio-col"> -->
+                                            <div class="custom-control custom-radio compain-radio compain-audience__radio-item">
+                                                <input type="radio" id="compainRadio{{ loop.index }}" name="compainRadio" class="custom-control-input compain-radio__input">
+                                                <label class="custom-control-label compain-radio__label" for="compainRadio{{ loop.index }}">{{ item.text1 }}</label>
+                                            </div>
+                                            <!-- <div class="custom-control custom-radio compain-radio">
                                                             <input type="radio" id="compainRadio1{{ loop.index }}" name="compainRadio" class="custom-control-input compain-radio__input">
                                                             <label class="custom-control-label compain-radio__label" for="compainRadio1{{ loop.index }}">Any Age</label>
                                                         </div> -->
-                                                    <!-- </div> -->
+                                            <!-- </div> -->
                                             {% endfor %}
-                                        <!-- </div> -->
+                                            <!-- </div> -->
                                         </div>
                                     </div>
                                 </div>
-                                
+
                                 <div class="input-group compain-audience__input-group">
                                     <label for="image" class="compain-audience__label input-group__label">Countries</label>
                                     <div class="input-group__wrap">
@@ -175,7 +136,7 @@
                                 <div class="compain-audience__budget">
                                     <h4 class="compain-audience__title">Content Budget</h4>
                                     <div class="compain-audience__text">
-                                            The size of the budget<span>1000$</span>
+                                        The size of the budget<span>1000$</span>
                                     </div>
                                     <div class="compain-audience__text">
                                         Audience size<span>400-500k</span>
