--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -3,7 +3,7 @@
 <header class="header{% if fixed %} header_fixed{% endif %}">
     <div class="header__wrap inner{% if login %} inner_lg{% endif %}">
         <div class="logo">
-            <a href="#">
+            <a href="./index.html">
                 <img src="./img/logo (1)@2x.png" alt="img">
             </a>
         </div>
