сampaigns.html desctop done

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -41,6 +41,14 @@ body
     &_sm
         padding: rem(6px 40px)
         line-height: 1
+    &_blue
+        background-color: #0066AA 
+        border-color: #0066AA 
+        &:hover
+            background-color: darken(#0066AA, 8%) 
+            border-color: darken(#0066AA, 8%) 
+    &_rad
+        border-radius: 20px 
     
 
 .width173
