--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -13,6 +13,8 @@
             padding: rem(114px 0 0)
         +sm
             padding: rem(100px 0 0)
+    &__out
+        padding: rem(40px 50px 225px 55px)
     &__btn
         margin-bottom: rem(50px)
         +md
