--- a/src/templates/сampaigns.html
+++ b/src/templates/сampaigns.html
@@ -5,11 +5,7 @@ title: Campaigns
 
 {% block content %}
 
-	
-	{# Start header #}
 	{{header.block(false, true)}}
-	{# END header #}
-
-
+	{% include "partials/campaigns/_statistics.html" %}
 
 {% endblock %}
