сampaigns.html mob done

--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -15,6 +15,10 @@
             padding: rem(100px 0 0)
     &__out
         padding: rem(40px 50px 225px 55px)
+        +xl
+            padding: rem(30px 25px 110px 25px)
+        +md
+            padding: rem(15px 15px 30px)
     &__btn
         margin-bottom: rem(50px)
         +md
@@ -58,6 +62,8 @@
     // align-items: center
     padding: rem(27px 58px)
     border-bottom: 1px solid #D5D5D5
+    +xl
+        padding: rem(20px 25px)
     +md
         padding: rem(15px 20px)
     +sm
