--- a/src/sass/components/dashboard/_statistics.sass
+++ b/src/sass/components/dashboard/_statistics.sass
@@ -2,16 +2,32 @@
 	&__row
 		margin: rem(0 -15px)
 		display: flex
+		flex-wrap: wrap
 		justify-content: space-between
 	&__col
 		padding: rem(0 15px)
 		min-width: 240px
 		display: inline-block
+		&:not(:first-child)
+			+xs
+				margin-top: 10px
+		+xl
+			min-width: 180px
+		+sm
+			width: 48%
+			display: inline-block
+		+xs
+			width: 100%
+			text-align: center
 	&__numb
 		font-family: "Inconsolata", sans-serif
-		font-size: 46px
+		font-size: rem(46px)
 		line-height: 1.2
 		color: #717171 
+		+xl
+			font-size: rem(32px)
+		+md
+			font-size: rem(26px)
 	&__title
 		font-family: "Inconsolata", sans-serif
 		font-size: rem(20px)
@@ -19,3 +35,7 @@
 		letter-spacing: 0.1em 
 		color: #191919 
 		text-transform: uppercase
+		+xl
+			font-size: rem(18px)
+		+md
+			font-size: rem(16px)
