--- a/src/sass/components/dashboard/_user.sass
+++ b/src/sass/components/dashboard/_user.sass
@@ -4,13 +4,22 @@
 	table-layout: fixed
 	box-shadow: 0 2px 4px rgba(#000, .16) 
 	background-color: #FFF 
+	+sm
+		display: block
 	&:not(:first-child)
 		margin-top: 80px
+		+xl
+			margin-top: 50px
+		+md
+			margin-top: 25px
 	&__img-wrap
 		width: 320px
-		height: 320px
 		vertical-align: top
 		display: table-cell
+		+xl
+			width: 240px
+		+md
+			display: none
 	&__img
 		width: 100%
 		padding-bottom: 100%
@@ -20,16 +29,24 @@
 		padding: rem(18px 45px 19px 60px)
 		vertical-align: top
 		display: table-cell
+		+xl
+			padding: rem(15px)
+		+sm
+			display: block
 	&__head
 		margin-bottom: rem(20px) 
 		display: flex
 		justify-content: space-between
+		+xl
+			margin-bottom: rem(10px) 
 	&__name
 		font-family: "Inconsolata", sans-serif
 		font-size: rem(35px)
 		line-height: 1.2
 		letter-spacing: 0.1em 
 		color: #40B9A6 
+		+xl
+			font-size: rem(26px)
 	&__soc
 		margin-left: 15px
 		.social__item
@@ -42,18 +59,28 @@
 		display: flex
 		flex-wrap: wrap
 		&:not(:first-child)
-			margin-top: 21px
+			margin-top: rem(21px)
+			+xl
+				margin-top: rem(10px) 
 	&__col
 		padding: 0 rem(10px)
 		flex: 0 0 20%
 		max-width: 20%
-		+xl
-			flex: 0 0 40%
-			max-width: 40%
+		+sm
+			margin-bottom: 2px
+			flex: 0 0 33.3%
+			max-width: 33.3%
+		+xs
+			flex: 0 0 50%
+			max-width: 50%
 	&__numb
 		line-height: 1.3
 		font-size: 20px
 		font-weight: 700 
+		+xl
+			font-size: rem(16px)
+		+md
+			font-size: rem(15px)
 		&_red
 			color: #ED8597 
 	&__title
@@ -62,12 +89,20 @@
 		line-height: 1.6
 		letter-spacing: 0.1em 
 		color: #717171 
+		+xl
+			font-size: rem(16px)
+			line-height: 1.4
 		&:not(:first-child)
 			margin-top: rem(6px)
+			+xl
+				margin-top: rem(3px)
+
 	&__footer
 		margin-top: rem(32px) 
 		display: flex
 		justify-content: space-between
+		+xl
+			margin-top: rem(20px) 
 		.btn
 			&:not(:first-child)
-				margin-left: 15px
+				margin-left: rem(15px)
