added settings-general page

--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -9,4 +9,5 @@
 @import compain-details/index
 @import compain-audience/index
 @import compain-review/index
+@import settings-general/index
 @import footer
