influencers.html STARTED

--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -47,8 +47,13 @@
             +sm
                 font-size: rem(12px)
                 margin-top: rem(1px)
-
-
+    &__wind
+        padding: 38px 70px 70px 50px
+    &__description
+        font-size: 22px
+        line-height: 1.45
+        &:not(:last-child)
+            margin-bottom: 38px
 
 
 
@@ -60,7 +65,7 @@
     // height: rem(73px)
     // display: flex
     // align-items: center
-    padding: rem(27px 58px)
+    padding: rem(25px 58px)
     border-bottom: 1px solid #D5D5D5
     +xl
         padding: rem(20px 25px)
@@ -399,7 +404,6 @@
     &_readed
         .dialogue-message__check
             color: $primary
-
 .filter-select
     vertical-align: top
     display: inline-block
