--- a/src/templates/partials/campaigns/_influencers.html
+++ b/src/templates/partials/campaigns/_influencers.html
@@ -6,13 +6,16 @@
         <div class="dashboard__body dashboard-body">
             <div class="dashboard__header dashboard-header">
                 <!-- begin sm-tabs -->
-                <ul class="sm-tabs">
-                    {% for text in ['Discover','Hired'] %}
-                    <li class="sm-tabs__item{% if loop.first %} is-active{% endif %}">
-                        <a href="#" class="sm-tabs__link">{{ text }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
+                <div class="sm-tabs">
+                    <div class="sm-tabs__current">Discover</div>
+                    <ul class="sm-tabs__list">
+                        {% for text in ['Discover','Hired'] %}
+                        <li class="sm-tabs__item{% if loop.first %} is-active{% endif %}">
+                            <a href="#" class="sm-tabs__link">{{ text }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
                 <!-- end sm-tabs -->
             </div>
             <div class="dashboard__wrapper">
